Fixed an issue where PDToolbarPlaceholders with child PDToolbarItems with ShiftRight property set would not shift right in the toolbar.

--- a/PanoramicData.Blazor/PDToolbarItem.razor.css
+++ b/PanoramicData.Blazor/PDToolbarItem.razor.css
@@ -1,17 +1,21 @@
-﻿.pdtoolbaritem {
+﻿.pdtoolbaritem
+{
 	padding: 5px;
 	display: inline-flex; /* Ensure toolbar items display inline */
 	align-items: center;
 }
 
-.pdtoolbaritem:first-child {
+.pdtoolbaritem:first-child
+{
 	padding-left: 0px;
 }
 
-.pdtoolbaritem:last-child {
+.pdtoolbaritem:last-child
+{
 	padding-right: 0px;
 }
 
-.pdtoolbaritem.align-right {
+.pdtoolbaritem.align-right
+{
 	margin-left: auto;
 }
